<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_170sdp"
        android:layout_margin="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_6sdp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/tripImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            tools:src="@drawable/pic_home_screen"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_color"/>

        <TextView
            android:id="@+id/tripTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:fontFamily="@font/source_sans_pro"
            tools:text="@string/title"
            android:textColor="#ffffff"
            android:textSize="@dimen/_25ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tripImageView" />

        <TextView
            android:id="@+id/tripHistoryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/source_sans_pro"
            tools:text="@string/history"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="@dimen/_12sdp"
            android:textColor="#FCFCFD"
            android:textSize="@dimen/_18ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tripTitleText" />

        <TextView
            android:id="@+id/tripLeftTimeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_gravity="end|bottom"
            tools:text="@string/day_left"
            android:textColor="#FCFCFD"
            android:textSize="@dimen/_13ssp"
            android:drawablePadding="@dimen/_5sdp"
            app:drawableLeftCompat="@drawable/ic_baseline_access_time_24"
            app:layout_constraintEnd_toEndOf="@+id/tripImageView"
            app:layout_constraintTop_toBottomOf="@+id/tripHistoryText" />

        <TextView
            android:id="@+id/tripItemText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:drawablePadding="@dimen/_5sdp"
            tools:text="@string/_5_items"
            android:layout_gravity="start|bottom"
            android:textColor="#FCFCFD"
            android:textSize="@dimen/_13ssp"
            app:drawableLeftCompat="@drawable/ic_baseline_bookmark_24"
            app:layout_constraintStart_toStartOf="@+id/tripImageView"
            app:layout_constraintTop_toBottomOf="@+id/tripHistoryText" />

    </com.google.android.material.card.MaterialCardView>
</layout>