<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="adapterTrip"
            type="com.kursatkumsuz.bootcampfinalprojecttravelapp.presentation.tripscreen.adapter.TripRecyclerViewAdapter" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.tripscreen.TripFragment">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_44sdp"
            android:fontFamily="@font/source_sans_pro"
            android:text="@string/trip_plan"
            android:textColor="#292C3D"
            android:textSize="@dimen/_26ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            style="@style/CustomTabLayout"
            app:tabInlineLabel="true"
            app:tabIconTint="@color/colors"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_brief_case_filled"
                android:text="@string/trips" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bookmark"
                android:icon="@drawable/ic_baseline_bookmark_24"
                tools:layout_editor_absoluteX="196dp"
                tools:layout_editor_absoluteY="45dp" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tripRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adapter="@{adapterTrip}"
            android:paddingBottom="?attr/actionBarSize"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="vertical"
            tools:listitem="@layout/list_item_trip"
            tools:itemCount="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addTripFab"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginBottom="@dimen/_80sdp"
            app:fabCustomSize="@dimen/_50sdp"
            app:maxImageSize="@dimen/_25sdp"
            android:src="@drawable/ic_add"
            android:backgroundTint="#FF4760"
            app:tint="#FFFFFF"
            android:foregroundGravity="center_horizontal|center_vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieView"
            android:layout_width="@dimen/_290sdp"
            android:layout_height="@dimen/_290sdp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_speed="3"
            app:lottie_rawRes="@raw/animation_loading" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>